--- a/02_express/views/about.ejs
+++ b/02_express/views/about.ejs
@@ -8,8 +8,18 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Express</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Main page</h1>
+    <%- include('blocks/header') -%>
+    <main>
+      <h1>About page</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        Maxime sed laboriosam alias numquam eveniet aliquam quae
+        consequuntur quidem repudiandae voluptatibus nostrum expedita
+        eaque impedit saepe, aliquid qui fuga porro rem.
+      </p>
+    </main>
   </body>
 </html>
