--- a/02_express/views/index.ejs
+++ b/02_express/views/index.ejs
@@ -8,8 +8,18 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Express</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Main page</h1>
+    <%- include('blocks/header') -%>
+    <main>
+      <h1>Main page</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Praesentium atque fuga modi veritatis dolorem quia corporis
+        ullam ex eaque voluptatem vero a illum molestiae recusandae,
+        quae ipsum. Illum, tempore eum.
+      </p>
+    </main>
   </body>
 </html>
