--- a/02_express/views/user.ejs
+++ b/02_express/views/user.ejs
@@ -8,15 +8,20 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Express</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>User page: <%= username %></h1>
-    <% if(username == 'Andrii') { %>
-    <ul>
-      <% hobbies.forEach((el) => { %>
-      <li><%= el %></li>
-      <% }) %>
-    </ul>
-    <%} %>
+    <%- include('blocks/header') -%>
+    <main>
+      <h1>User page: <%= username %></h1>
+      <% if(username == 'Andrii') { %>
+
+      <ul>
+        <% hobbies.forEach((el) => { %>
+        <li><%= el %></li>
+        <% }) %>
+      </ul>
+      <%} %>
+    </main>
   </body>
 </html>
