--- a/02_express/views/about.ejs
+++ b/02_express/views/about.ejs
@@ -21,5 +21,6 @@
         eaque impedit saepe, aliquid qui fuga porro rem.
       </p>
     </main>
+    <%- include('blocks/footer') -%>
   </body>
 </html>
