--- a/02_express/views/blocks/footer.ejs
+++ b/02_express/views/blocks/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <span>Node <em>&</em> Express</span>
-  <form>
-    <input type="text" placeholder="Post a review" />
-    <button>Post</button>
+  <form method="post" action="/check-user">
+    <input type="text" name="username" placeholder="Post a review" />
+    <button type="submit">Post</button>
   </form>
 </footer>
