--- a/02_express/views/blocks/header.ejs
+++ b/02_express/views/blocks/header.ejs
@@ -2,10 +2,10 @@
   <span>Node <em>&</em> Express</span>
   <nav>
     <a href="/">Main</a>
-    <a href="">About us</a>
+    <a href="/about">About us</a>
   </nav>
-  <form>
-    <input type="text" placeholder="User name" />
-    <button>Search</button>
+  <form method="post" action="/check-user">
+    <input type="text" name="username" placeholder="User name" />
+    <button type="submit">Search</button>
   </form>
 </header>
